third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/fallback-impl-with-display.rs
use core::fmt::{self, Display};
use thiserror::Error;

#[derive(Error, Debug)]
#[error]
pub struct MyError;

impl Display for MyError {
    fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
        unimplemented!()
    }
}

fn main() {}
